--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="iterative-engineering-inbox-opener" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="iterative.engineering.inbox.opener" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>InboxOpener</name>
     <js-module name="InboxOpener" src="www/InboxOpener.js">
         <clobbers target="cordova.plugins.InboxOpener" />
@@ -7,10 +7,10 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="InboxOpener">
-                <param name="android-package" value="iterative-engineering-inbox-opener.InboxOpener" />
+                <param name="android-package" value="iterative.engineering.inbox.opener.InboxOpener" />
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-        <source-file src="src/android/InboxOpener.java" target-dir="src/iterative-engineering-inbox-opener/InboxOpener" />
+        <source-file src="src/android/InboxOpener.java" target-dir="src/iterative.engineering.inbox.opener/InboxOpener" />
     </platform>
 </plugin>
