--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A plugin to open e-mail inbox.",
   "cordova": {
-    "id": "iterative.engineering.inbox.opener",
+    "id": "inbox-opener",
     "platforms": [
       "android"
     ]
